<resources>
    <string name="app_name">Jadwal-Ku</string>
    <string name="now_label">Sekarang</string>
    <string name="open">Buka</string>
    <string name="no_event_label">Tidak Ada Jadwal</string>
    <string name="upcoming_label">Akan Datang</string>
    <string name="no_upcoming_label">Belum ada acara yang akan datang</string>
    <string name="open_youtube">Buka Youtube</string>
    <string name="event_thumbnail">Event Thumbnail</string>
    <string name="reload">Muat Ulang</string>
    <string name="event_detail">Detil Jadwal</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_required_error">Field ini tidak boleh kosong</string>
    <string name="password_required_error">Field ini tidak boleh kosong</string>
    <string name="global_error">Sesuatu terjadi</string>
    <string name="login_error">Username atau password tidak valid</string>
    <string name="general_error">Sesuatu terjadi</string>
    <string name="lblHome">Home</string>
    <string name="lblSettings">Settings</string>
    <string name="lblList">Events</string>
    <string name="open_zoom">Buka Zoom</string>
    <string name="txtVersion">Versi</string>
    <string name="logout">Keluar</string>
    <string name="settings">Settings</string>
    <string name="imgListToDetailTransition">img_list_to_detail_transition</string>
</resources>