<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"
        app:title="@string/app_name"
        app:titleCentered="true"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="?attr/colorOnPrimary"
        />

    <ImageView
        android:id="@+id/imgThumbnail"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        tools:src="@tools:sample/backgrounds/scenic"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:contentDescription="@string/event_thumbnail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Kajian Anak Jabodetabek"
        app:layout_constraintTop_toBottomOf="@id/imgThumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="11sp"
        android:id="@+id/lblOrganizer"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Ramadhanku yang berkesan"
        app:layout_constraintTop_toBottomOf="@id/lblOrganizer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="16sp"
        android:id="@+id/lblTitle"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Erlan Iskandar S.T"
        app:layout_constraintTop_toBottomOf="@id/lblTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0"
        android:id="@+id/lblPresenter"
        />

    <ImageView
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:id="@+id/imgCalendarIcon"
        android:src="@drawable/baseline_calendar_today_24"
        app:layout_constraintTop_toBottomOf="@id/lblPresenter"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/lblDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/imgCalendarIcon"
        app:layout_constraintBottom_toBottomOf="@id/imgCalendarIcon"
        app:layout_constraintStart_toEndOf="@id/imgCalendarIcon"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Jumat, 17 Maret 2023"
        android:layout_marginStart="8dp"
        android:textSize="11sp"
        app:layout_constraintHorizontal_bias="0"
        />

    <ImageView
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:id="@+id/imgClockIcon"
        android:src="@drawable/baseline_access_time_24"
        app:layout_constraintTop_toBottomOf="@id/imgCalendarIcon"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        />

    <TextView
        android:id="@+id/lblTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/imgClockIcon"
        app:layout_constraintBottom_toBottomOf="@id/imgClockIcon"
        app:layout_constraintStart_toEndOf="@id/imgClockIcon"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="14.00 WIB"
        android:layout_marginStart="8dp"
        android:textSize="11sp"
        app:layout_constraintHorizontal_bias="0"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_youtube"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:icon="@drawable/baseline_smart_display_24"
        android:textAllCaps="true"
        app:iconGravity="textStart"
        />

</androidx.constraintlayout.widget.ConstraintLayout>